samples/_failures_safe/1761797485_5b27ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39cf6ab6.c: In function ‘main’:
./samples/SAFE/__tmp_39cf6ab6.c:185:9: error: expected expression at end of input
  185 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_39cf6ab6.c:185:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_39cf6ab6.c:185:9: error: expected declaration or statement at end of input
